<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:background="@drawable/recycler_item_background_ripple"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    android:elevation="4dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_table_receipts_item" />

    <TextView
        android:id="@+id/text_view_table_receipts_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="10" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/rectangle_divider"
        android:contentDescription="@string/divider" />

    <LinearLayout
        android:id="@+id/linear_layout_receipts_item"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/rectangle_divider"
        android:contentDescription="@string/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_total_receipts_item"
        android:gravity="end" />

    <TextView
        android:id="@+id/text_view_total_receipts_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        tools:text="10.00 PLN" />


</LinearLayout>