<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.receipt.ReceiptActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_total_receipt"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/text_view_total_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="100,00PLN"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/recycler_item_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_table_receipt"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />

        <Spinner
            android:id="@+id/spinner_tables_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_list_item_1"
            android:background="@drawable/spinner_background_arrow"
            android:elevation="4dp"
            android:layout_marginHorizontal="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_orders_receipt"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:id="@+id/linear_layout_orders_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button_add_order_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background_ripple"

            android:elevation="4dp"
            android:minHeight="64dp"
            android:paddingHorizontal="40dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"

            android:text="@string/button_add_order_receipt"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="20sp"

            android:textStyle="bold"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>